// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Active CityLink component should render correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item  tabs__item--active"
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;

exports[`CityLink component should render correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item"
    href="#"
    onClick={[Function]}
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;
